--- a/package.json
+++ b/package.json
@@ -4,31 +4,34 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/cli": "^18.0.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.27",
-    "expo-font": "~13.0.3",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.9",
+    "expo-font": "~13.3.1",
+    "expo-status-bar": "~2.2.3",
     "native-base": "^3.4.28",
-    "react": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^4.5.0",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "^0.19.13",
-    "react-dom": "18.3.1"
+    "onesignal-expo-plugin": "2.0.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-onesignal": "^5.0.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
